=======

0.4.2b
------
- sql
    - changed name of TEXT to Text since its a "generic" type; TEXT name is
      deprecated until 0.5.  The "upgrading" behavior of String to Text 
      when no length is present is also deprecated until 0.5; will issue a
      warning when used for CREATE TABLE statements (String with no length
      for SQL expression purposes is still fine) [ticket:912]

- orm
    - Fixed cascades on a += assignment to a list-based relation.
    
    - synonyms can now be created against props that don't exist yet,
      which are later added via add_property().  This commonly includes
      backrefs. (i.e. you can make synonyms for backrefs without
      worrying about the order of operations) [ticket:919]

    - fixed bug which could occur with polymorphic "union" mapper
      which falls back to "deferred" loading of inheriting tables
      
    - the "columns" collection on a mapper/mapped class (i.e. 'c')
      is against the mapped table, not the select_table in the 
      case of polymorphic "union" loading (this shouldn't be 
      noticeable)
      
- ext
    - '+', '*', '+=' and '*=' support for association proxied lists.

0.4.2a
------

- orm
    - fixed fairly critical bug whereby the same instance could be listed
      more than once in the unitofwork.new collection; most typically
      reproduced when using a combination of inheriting mappers and 
      ScopedSession.mapper, as the multiple __init__ calls per instance
      could save() the object with distinct _state objects

    - added very rudimentary yielding iterator behavior to Query.  Call
      query.yield_per(<number of rows>) and evaluate the Query in an 
      iterative context; every collection of N rows will be packaged up
      and yielded.  Use this method with extreme caution since it does
      not attempt to reconcile eagerly loaded collections across
      result batch boundaries, nor will it behave nicely if the same