@@ -12,6 +12,8 @@ CHANGES
       for SQL expression purposes is still fine) [ticket:912]
 
 - orm
+    - suppressing *all* errors in InstanceState.__cleanup() now.  
+    
     - Fixed cascades on a += assignment to a list-based relation.
     
     - synonyms can now be created against props that don't exist yet,
